Renamed and restructured app

--- a/EnglishBooster.csproj
+++ b/EnglishBooster.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>english_booster</RootNamespace>
+    <RootNamespace>EnglishBooster</RootNamespace>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
