Removed multiple factories implementation

--- a/EnglishBooster.API/appsettings.json
+++ b/EnglishBooster.API/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "BotToken": "1123299534:AAEjQzvubh4Cwznmnq1M6dmYHTSJ44Xn9YU"
+  "BotToken": "1123299534:AAEjQzvubh4Cwznmnq1M6dmYHTSJ44Xn9YU",
+  "ConnectionStrings": {
+    "MongoDbConnection": "mongodb://admin:admin123@ds125526.mlab.com:25526/heroku_ctl5s17h"
+  } 
 }
