--- a/EnglishBooster.API/appsettings.json
+++ b/EnglishBooster.API/appsettings.json
@@ -9,6 +9,10 @@
   "AllowedHosts": "*",
   "BotToken": "1123299534:AAEjQzvubh4Cwznmnq1M6dmYHTSJ44Xn9YU",
   "ConnectionStrings": {
-    "MongoDbConnection": "mongodb://admin:admin123@ds125526.mlab.com:25526/heroku_ctl5s17h"
-  } 
+    "MongoDbConnection": "mongodb+srv://dbAdmin:admin123@mongo-cluster-ebftc.mongodb.net/English-Booster?retryWrites=true&w=majority"
+  },
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb+srv://dbAdmin:admin123@mongo-cluster-ebftc.mongodb.net",
+    "DatabaseName": "English-Booster"
+  }
 }
